--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+.calculator {
+  background-color: rgba(255, 0, 0, 0.4);
+  width: 450px;
+  border-radius: 10px;
+  aspect-ratio: 9 / 12;
+  position: fixed;
+  inset: 0rem;
+  margin: auto;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.calculator-screen {
+  width: 80%;
+  height: 15%;
+  background-color: black;
+  margin: 30px auto;
+  border-radius: 10px;
   color: white;
+  text-align: right;
 }
 
-.App-link {
-  color: #61dafb;
+.calculator-keypad {
+  width: 80%;
+  height: 65%;  
+  margin: 30px auto;  
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calculator-keypad button {
+  cursor: pointer;
+  border-radius: 10px;
+  margin: 3px;
+  color: white;
+  font-weight: 500;
+  font-size: x-large;
+}
+
+.calculator-keypad button:hover {
+  cursor: pointer;
+  filter: brightness(80%);
+}
+
+.calculator-keypad button.number-btn {
+  border: white solid 1px;
+  background-color: rgb(250, 142, 160);
+  
+}
+
+.calculator-keypad button.operation-btn {
+  border: white solid 1px;
+  background-color: palevioletred;
+}
+
+.calculator-keypad button[value="="] {
+  grid-row: span 2;
+}
+
+.calculator-keypad button[value="+"] {
+  grid-row: span 2;
+}
+
+
+.calculator-keypad button[value="0"] {
+  grid-column: 1/3;
+}
+
+.calculator-screen .current-operation {
+  font-size: 45px;
+  margin: 0 10px 10px 10px;
+}
+
+.calculator-screen .history {
+  margin: 10px 10px 0 10px;
 }
